1999-07-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.94

	* Makefile.am (SUBDIRS): librsaref
	(dist-hook): Lose CVS subdirs in the distribution tarball

	* include/Makefile.am (noinst_HEADERS): Added iosignal.h, recvbuff.h

	* Makefile.am (dist-hook): Don't call dos2unix anymore

1999-07-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acconfig.h: 
	* util/ntptime.c: FreeBSD nano patches
	From: Per Hedeland <per@erix.ericsson.se> and
	Allen Smith <easmith@beatrice.rutgers.edu>

	* include/ntp.h:
	include/ntp_fp.h:
	include/ntp_io.h:
	include/ntp_machine.h:
	include/ntp_refclock.h:
	include/ntp_stdlib.h:
	include/ntpd.h:
	libntp/Makefile.am:
	libntp/emalloc.c:
	libntp/machines.c:
	libntp/mexit.c:
	libntp/msyslog.c:
	libntp/statestr.c:
	libntp/syssignal.c:
	libntp/systime.c:
	libparse/parse.c:
	libparse/parse_conf.c:
	ntpd/ntp_control.c:
	ntpd/ntp_intres.c:
	ntpd/ntp_io.c:
	ntpd/ntp_proto.c:
	ntpd/ntp_refclock.c:
	ntpd/ntp_request.c:
	ntpd/ntp_timer.c:
	ntpd/ntp_util.c:
	ntpd/ntpd.c:
	ntpd/refclock_nmea.c:
	ntpd/refclock_palisade.c:
	ntpd/refclock_palisade.h:
	ntpd/refclock_shm.c:
	ntpdate/ntpdate.c:
	ntptrace/ntptrace.c: Cleanup
	* libntp/recvbuff.c:
	libntp/iosignal.c:
	include/iosignal.h:
	include/recvbuff.h: Added
	From: Sven_Dietrich@Trimble.COM

	* README: Add README.cvs

	* configure.in (ac_cv_var_struct_ntptime_val_timespec): Typo.
	From: John Hay <jhay@mikom.csir.co.za>

1999-07-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* Makefile.am (EXTRA_DIST): Lose ntpmak; "build" does a better job.

	* ntpq/Makefile.am (version.o): Use mkver
	* ntptrace/Makefile.am (version.o): Ditto
	* ntpdate/Makefile.am (version.o): Ditto
	* ntpd/Makefile.am (version.o): Ditto
	* ntpdc/Makefile.am (version.o): Ditto

	* configure.in (AC_OUTPUT): scripts/mkver

	* scripts/mkver.in: Created.  Note RSAREF in the version string

1999-07-18  Harlan Stenn  <stenn@whimsy.udel.edu>

	* README.des: Updated.

	* ntpq/Makefile.am (LDADD): Add LIBRSAREF
