@@ -2581,17 +2581,20 @@ esac
 
 AC_SUBST(MAKE_NTPTIME)
 AC_CACHE_CHECK(if we want and can make the ntptime utility, ac_cv_make_ntptime,
-[case "$ac_cv_struct_ntptimeval_timespec$ac_cv_var_kernel_pll$target" in
- noyes*linux*)
+[case "$target" in
+ *linux*)
     ans=no
     ;;
- noyes*)
-    ans=yes
+ *) case "$ac_cv_struct_ntptimeval_timespec$ac_cv_struct_ntptimeval_tv_nsc$ac_cv_var_kernel_pll" in
+     *yes*yes)
+	ans=yes
+	;;
+     *)
+	ans=no
+	;;
+    esac
     ;;
- *)
-    ans=no
-    ;;
-esac;
+esac
 ac_cv_make_ntptime=$ans])
 case "$ac_cv_make_ntptime" in
  yes)
