@@ -1,5 +1,10 @@
 1999-07-21  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* configure.in (ac_cv_make_ntptime): Add tv_nsec check.
+
+	* include/Makefile.am (noinst_HEADERS): Forgot ntp_syscall.h
+	From: John.Hay@mikom.csir.co.za
+
 	* configure.in: 4.0.94
 
 	* Makefile.am (SUBDIRS): librsaref
